# genai-agent-advanced-book

chapter5/: README.md  pyproject.toml
chapter5/scripts/: 01_e2b_sandbox.py  02_jinja_template.py  03_describe_dataframe.py  04_generate_profile.py  05_generate_code.py  06_execute_code.py  07_generate_review.py  08_programmer.py  09_generate_plan.py  10_execute_plan.py  11_generate_report.py  programmer.py
chapter5/src/graph/: data_analysis.py  programmer.py
chapter5/src/graph/models/: __init__.py  data_analysis_state.py  programmer_state.py
chapter5/src/graph/nodes/: __init__.py  approve_plan.py  execute_code.py  generate_code.py  generate_plan.py  generate_review.py  set_dataframe.py
chapter5/src/llms/apis/: openai.py
chapter5/src/models/: __init__.py  plan.py
chapter5/src/modules/: describe_dataframe.py  execute_code.py  generate_code.py  generate_plan.py  generate_report.py  generate_review.py  set_dataframe.py
chapter5/src/prompts/: generate_code.jinja  generate_plan.jinja  generate_review.jinja
chapter7/: .env.sample  pyproject.toml
chapter7/notebooks/: decision_support_agent_runner.ipynb  macrs_runner.ipynb  marketing_process_agent_run.ipynb
chapter7/src/decision_support_agent/: agent.py  configs.py  custom_logger.py  models.py  prompts.py
chapter7/src/macrs/: agent.py  configs.py  models.py
chapter7/src/marketing_process_agent/: agent.py  configs.py  models.py  prompts.py
chapter7/src/marketing_process_agent/tools/: task_tools.py
